--- a/select_agric_dialog_base.ui
+++ b/select_agric_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>316</width>
-    <height>537</height>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>-60</x>
-     <y>490</y>
+     <y>520</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
+     <x>10</x>
+     <y>10</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -45,22 +45,22 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>20</y>
-     <width>31</width>
-     <height>16</height>
+     <x>10</x>
+     <y>40</y>
+     <width>141</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Carta:</string>
+    <string>Digite Carta ou Mun ou Meso:</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>20</y>
-     <width>104</width>
+     <x>160</x>
+     <y>40</y>
+     <width>131</width>
      <height>21</height>
     </rect>
    </property>
@@ -68,8 +68,8 @@
   <widget class="QSpinBox" name="spinBox_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>20</y>
+     <x>70</x>
+     <y>10</y>
      <width>42</width>
      <height>22</height>
     </rect>
@@ -79,7 +79,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>50</y>
+     <y>80</y>
      <width>62</width>
      <height>22</height>
     </rect>
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>50</y>
+     <y>80</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -102,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>50</y>
+     <y>80</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -115,7 +115,7 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>50</y>
+     <y>80</y>
      <width>62</width>
      <height>22</height>
     </rect>
@@ -128,26 +128,16 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>80</y>
-     <width>211</width>
-     <height>16</height>
+     <y>110</y>
+     <width>221</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Degr.Past.(1-Ausent, 2-Interm, 3-Severa):</string>
+    <string>Degr.Past.(0-tds, 1-Ausen, 2-Interm, 3-Sev):</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="spinBox">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>80</y>
-     <width>42</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_3">
    <property name="geometry">
     <rect>
      <x>250</x>
@@ -157,11 +147,21 @@
     </rect>
    </property>
   </widget>
+  <widget class="QSpinBox" name="spinBox_3">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>140</y>
+     <width>42</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>450</y>
+     <y>480</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>450</y>
+     <y>480</y>
      <width>71</width>
      <height>22</height>
     </rect>
@@ -187,13 +187,36 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>110</y>
+     <y>140</y>
      <width>181</width>
      <height>321</height>
     </rect>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;AptAgric: Entre com o número!&lt;/p&gt;&lt;p&gt;1-(Lavoura e pecuaria)&lt;/p&gt;&lt;p&gt;2-(Lavoura e reflorestamento)&lt;/p&gt;&lt;p&gt;3-(Pecuaria e lavoura)&lt;/p&gt;&lt;p&gt;4-(Pecuaria e reflorestamento)&lt;/p&gt;&lt;p&gt;5-agua&lt;/p&gt;&lt;p&gt;6-Lavoura (pecuaria)&lt;/p&gt;&lt;p&gt;7-Lavoura e pecuaria&lt;/p&gt;&lt;p&gt;8-Pecuaria (lavoura)&lt;/p&gt;&lt;p&gt;9-Preservacao&lt;/p&gt;&lt;p&gt;10-Preservacao (lavoura e pecuari&lt;/p&gt;&lt;p&gt;11-Preservacao (pecuaria e lavour&lt;/p&gt;&lt;p&gt;12-Preservacao (pecuaria)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>10</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Cart(0)/ Mun(1)/ Meso(2):</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_5">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>10</y>
+     <width>42</width>
+     <height>22</height>
+    </rect>
    </property>
   </widget>
  </widget>
